BUG: fixed line-height for calendar-legend entries, was too tall in case of mutliple lines

--- a/modul_system/admin/skins/classic/styles.css
+++ b/modul_system/admin/skins/classic/styles.css
@@ -1132,6 +1132,7 @@ table.calendar div.spacer {
 
 div.calendarLegend {
     margin: 10px 0 4px 0 ;
+    line-height: 26px;
 }
 
 div.calendarLegendEntry {
