--- a/modul_system/admin/skins/kajona_v3/styles.css
+++ b/modul_system/admin/skins/kajona_v3/styles.css
@@ -1728,6 +1728,7 @@ table.calendar div.spacer {
 
 div.calendarLegend {
     margin: 10px 0 4px 0 ;
+    line-height: 26px;
 }
 
 div.calendarLegendEntry {
